# Network-Automation-Framework

./: .gitignore  CONTRIBUTING.md  README.md  inventory.yml  pyproject.toml
.github/workflows/: ci.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: enforce_acl.yml  provision_vlan.yml
ansible/roles/acl_enforce/tasks/: main.yml
ansible/roles/vlan_provision/tasks/: main.yml
configs/templates/: mgmt_acl.j2  vlan.j2
docs/: architecture.md  runbook-vlan-provisioning.md
netauto/: __init__.py  drivers.py  provision.py
netauto/cli/: __init__.py  main.py
netauto/collectors/: __init__.py  backup.py
netauto/inventory/: __init__.py  loader.py  models.py
netauto/utils/: __init__.py  diff.py  logging.py
netauto/validators/: __init__.py  change.py  compliance.py
policies/: baseline.yml
tests/: conftest.py
tests/integration/: test_lab.py
tests/unit/: test_backup.py  test_change.py  test_compliance.py  test_diff.py  test_inventory.py  test_provision.py
